2014-02-14  Kaz Kylheku  <kaz@kylheku.com>

	* eval.c (eval_init): Registered hash_update_1 as intrinsic.

	* hash.c (hash_update_1): New function.

	* hash.h (hash_update_1): Declared.

	* txr.1: Documented hash-update-1.

2014-02-14  Kaz Kylheku  <kaz@kylheku.com>

	* hash.c (inhash): Rename local variable from new to new_p.
	This is consistent with usage elsewhere in the module,
	and more importantly, keeps our code C++.

2014-02-14  Kaz Kylheku  <kaz@kylheku.com>

	* lib.c (class_check): Bugfix: the function was assuming that
	the argument is a pointer type object, leading to a crash
	if given a fixnum integer or string literal.

2014-02-14  Kaz Kylheku  <kaz@kylheku.com>

	* eval.c (eval_init): Register inhash as intrinsic.

	* hash.c (inhash): New function.

	* hash.h (inhash): Declared.

	* txr.1: Documented inhash. Also, added surprisingly missing
	documentation for gethash!

2014-02-12  Kaz Kylheku  <kaz@kylheku.com>

	Different approach: optional arguments on hash-isec and hash-uni allow
	for more flexible joining of data from the hash tables.

	* eval.c (eval_init): Remove hash_guni and hash_gisec. Change
	registration for hash_uni and hash_isec to three arguments with
	one optional.

	* hash.c (hash_uni): Third parameter introduced, join_func.
	The default behavior changes: in the two argument case,
	clashing keys prefer the value from hash1 rather than hash2.
	For this reason, we now iterate over hash2 first, then hash1.
	(hash_guni): Removed.
	(hash_isec): Third parameter introduced, join_func.
	(hash_gisec): Removed.

	* hash.h (hash_uni, hash_isec): Declarations updated.
	(hash_guni, hash_gisec): Delarations removed.

	* txr.1: Documentation updated.

2014-02-12  Kaz Kylheku  <kaz@kylheku.com>

	* eval.c (eval_init): Register hash_guni and hash_gisec as intrinsics.

	* hash.c (hash_guni, hash_gisec): New functions.
	(hash_isec): Bugfix: since gethash was naively used, keys in hash2
	associated with the value nil were erroneously omitted from the